src/objects/LG_ICOMSSUNIDMapping__c.object
<CustomObject>
    <description>ICOMS Id to SUN number mapping</description>
    <fields>
        <fullName>LG_OtherInfo__c</fullName>
        <label>Other Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_SiteId__c</fullName>
        <description>Site Id</description>
        <label>Site Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_DD_Reference__c</fullName>
        <label>PDF DD Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ICOMS SUNID Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LG_SiteId__c</columns>
        <columns>LG_OtherInfo__c</columns>
        <columns>PDF_DD_Reference__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SUN ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICOMS SUNID Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>